--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-GOOGLE_CLIENT_ID=1075486730502-ffh4u6ref4368irvsaq3qao6psdfk8t5.apps.googleusercontent.com
-GOOGLE_CLIENT_SECRET=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
-GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+GOOGLE_CLIENT_ID=80626869636-bm6efmokr5apscn0ugnghscossdvt7o7.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/callback
+PORT=8000
